--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,5 +26,11 @@
 
     <p>john.doe@mailservice.com,1Vlw1f5Q<br>
     jacob@mailservice.com,hXtD13fl</p>
+
+    <h3>À propos du logiciel</h3>
+
+    <p>csv2ots par Alexandre Poyer</p>
+
+    <a href="https://github.com/djalexkidd/csv2ots" target="_blank">Code source</a>
 </body>
 </html>
